# PyCircuitSim

./: .claudeignore  .gitignore  .gitmodules  BSIM4V5_COMPLETION_SUMMARY.md  CLAUDE.md  INTEGRATION_SUMMARY.md  README.md  before_parser_fix.py  main.py  pmos_vth_investigation_report.md  pyproject.toml  requirements.txt  run_test.sh  test_nmos.out  test_pmos_debug  test_pycmg_direct.py  test_python_bsim4.py  test_simple.sp  test_temperature_sweep.py  tmp_parser_fix.py  transient_analysis_enhancement_summary.md  validate_bsim4v5.py
docs/: BSIM4V5_VALIDATION.md  CHANGELOG.md  bsimcmg_investigation.md
examples/: bsimar_inverter_dc.sp  bsimar_nmos_dc.sp  bsimcmg_inverter_asap7.sp  bsimcmg_inverter_asap7_tran.sp  bsimcmg_inverter_dc.sp  bsimcmg_inverter_dc_asap7_ref.sp  bsimcmg_inverter_no_pseudo.sp  bsimcmg_inverter_tran.sp  bsimcmg_inverter_tran_slow.sp  bsimcmg_inverter_tran_verify.sp  bsimcmg_inverter_vdd12.sp  bsimcmg_inverter_vdd12_dc.sp  bsimcmg_inverter_vdd12_ramp.sp  bsimcmg_inverter_vdd12_slow.sp  bsimcmg_inverter_vdd12_small_dt.sp  bsimcmg_inverter_vdd12_very_slow.sp  bsimcmg_inverter_vdd15.sp  bsimcmg_inverter_vdd15_lvt_debug.sp  bsimcmg_inverter_vdd15_lvt_small_dt.sp  bsimcmg_inverter_vdd15_slow.sp  bsimcmg_inverter_vdd15_slvt.sp  bsimcmg_inverter_vdd3.slvt.sp  bsimcmg_nmos_dc.sp  bsimcmg_nmos_only.sp  bsimcmg_nmos_tran.sp  bsimcmg_pmos_dc.sp  bsimcmg_pmos_only.sp  bsimcmg_simple_tran.sp  compare_ac_results.py  inverter.sp  inverter_chain.sp  level1_inverter_tran.sp  level1_inverter_tran_convergence.sp  level1_inverter_tran_ngspice.sp  nmos_amplifier.sp  (+57 more)
(+332 files in other folders)
