[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycircuitsim"
version = "0.1.0"
description = "A simple Python circuit simulator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
